objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Confirmed_Tickets__c</fullName>
        <label>Confirmed Tickets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets_Booked__c</fullName>
        <label>Number of Tickets Booked</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_Tickets__c</fullName>
        <label>Waiting Tickets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Booking_View</fullName>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Confirmed_Tickets__c</columns>
        <columns>Waiting_Tickets__c</columns>
        <columns>Number_of_Tickets_Booked__c</columns>
        <columns>Total_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>Booking View</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_of_Tickets_Booked</fullName>
        <active>true</active>
        <errorConditionFormula>Number_of_Tickets_Booked__c &lt;=0</errorConditionFormula>
        <errorDisplayField>Number_of_Tickets_Booked__c</errorDisplayField>
        <errorMessage>Number of Tickets should be greater than 0</errorMessage>
    </validationRules>
</CustomObject>